feat 결과 조회 /showHistory api에 구매한 로또 출력

--- a/src/main/resources/templates/make_lotto.html
+++ b/src/main/resources/templates/make_lotto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link href="/css/make_lotto.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/lotto.css" rel="stylesheet" type="text/css"/>
     <title>로또</title>
 </head>
 <body>
@@ -119,11 +119,11 @@
         <div id="result-area" style="display:none">
             <p>-----제 <span id="turn_text"> </span>회 로또 당첨 결과-----</p>
             <div id="rank-area">
-                <p>6개 일치 (2000000000)- <span id="rank_1"> </span>개</p>
-                <p>5개 일치, 보너스 볼 일치(30000000원)- <span id="rank_2"> </span>개</p>
-                <p>5개 일치 (1500000)- <span id="rank_3"> </span>개</p>
-                <p>4개 일치 (50000)- <span id="rank_4"> </span>개</p>
-                <p>3개 일치 (5000)- <span id="rank_5"> </span>개</p>
+                <p>6개 일치 (2,000,000,000)- <span id="rank_1"> </span>개</p>
+                <p>5개 일치, 보너스 볼 일치(30,000,000원)- <span id="rank_2"> </span>개</p>
+                <p>5개 일치 (1,500,000)- <span id="rank_3"> </span>개</p>
+                <p>4개 일치 (50,000)- <span id="rank_4"> </span>개</p>
+                <p>3개 일치 (5,000)- <span id="rank_5"> </span>개</p>
             </div>
             <div>
                 <p>총 수익률은 <span id="rate"></span> 입니다.
