--- a/src/main/resources/templates/show_history.html
+++ b/src/main/resources/templates/show_history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <link href="/css/show_history.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/lotto.css" rel="stylesheet" type="text/css"/>
     <title>로또</title>
 </header>
 <body>
@@ -18,21 +18,43 @@
         </div>
         <div id="history-area" style="display:none">
             <p><span id="want-turn-text"></span>회 조회</p>
-            <div id="winlotto-area"></div>
+            <div id="lotteries-area">
+                <p>구매 로또</p>
+                <div id="lotto-number-area" class="lotto">
+                    <button id="lotto-1" type="button"></button>
+                    <button id="lotto-2" type="button"></button>
+                    <button id="lotto-3" type="button"></button>
+                    <button id="lotto-4" type="button"></button>
+                    <button id="lotto-5" type="button"></button>
+                    <button id="lotto-6" type="button"></button>
+                </div>
+            </div>
+            <br>
+            <div id="winlotto-area" class="lotto">
+                <p>우승 로또 번호</p>
+                <button id="win_1" type="button"></button>
+                <button id="win_2" type="button"></button>
+                <button id="win_3" type="button"></button>
+                <button id="win_4" type="button"></button>
+                <button id="win_5" type="button"></button>
+                <button id="win_6" type="button"></button>
+                +
+                <button id="win_bonus" type="button"></button>
+            </div>
+            <br>
             <div id="result-area">
                 <p>----- 결과 -----</p>
                 <div id="rank-area">
-                    <p>6개 일치 (2000000000)- <span id="rank_1"> </span>개</p>
-                    <p>5개 일치, 보너스 볼 일치(30000000원)- <span id="rank_2"> </span>개</p>
-                    <p>5개 일치 (1500000)- <span id="rank_3"> </span>개</p>
-                    <p>4개 일치 (50000)- <span id="rank_4"> </span>개</p>
-                    <p>3개 일치 (5000)- <span id="rank_5"> </span>개</p>
+                    <p>6개 일치 (2,000,000,000)- <span id="rank_1"> </span>개</p>
+                    <p>5개 일치, 보너스 볼 일치(30,000,000원)- <span id="rank_2"> </span>개</p>
+                    <p>5개 일치 (1,500,000)- <span id="rank_3"> </span>개</p>
+                    <p>4개 일치 (50,000)- <span id="rank_4"> </span>개</p>
+                    <p>3개 일치 (5,000)- <span id="rank_5"> </span>개</p>
                 </div>
                 <div id="profit-area">
                     <p>총 수익률은 <span id="profit-text"></span> 입니다.
                 </div>
             </div>
-            <div id="lotteries-area"></div>
         </div>
         
     </div>
