--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,7 +87,7 @@
 
 <body>
     <h1>로또</h1>
-    <a href="/buyLotto" class="btn btn-primary">로또 구매</a> <a href="/lookupLotto" class="btn btn-primary">회차 조회</a>
+    <a href="/buylotto" class="btn btn-primary">로또 구매</a> <a href="/lookuplotto" class="btn btn-primary">회차 조회</a>
 
     <div id="nextTimes"></div>
     <div class="section">
@@ -305,7 +305,7 @@
                 $.ajax({
                     method: 'POST',
                     data: data,
-                    url: '/lottoResult',
+                    url: '/lottoresult',
                     success: function (data) {
                         var json_obj = $.parseJSON(data);
                         initLotto();
@@ -344,7 +344,7 @@
             function printResult(result, divId) {
                 $.ajax({
                     method: 'get',
-                    url: '/lottoResult',
+                    url: '/lottoresult',
                     success: function (data) {
                         var json_obj = $.parseJSON(data);
                         console.log(json_obj);
@@ -369,7 +369,7 @@
             function printLottoYield() {
                 $.ajax({
                     method: 'get',
-                    url: '/lottoYield',
+                    url: '/lottoyield',
                     success: function (data) {
                         child = '<div class="result">총 수익율은 ' + data + '% 입니다.</div>';
                         $('#result').append(child);
@@ -394,7 +394,7 @@
                 var times;
                 $.ajax({
                     method: 'get',
-                    url: '/lottoNextTimes',
+                    url: '/lottonexttimes',
                     success: function (data) {
                         console.log(data);
                         $('#nextTimes').empty();
