--- a/src/main/resources/templates/numbers.html
+++ b/src/main/resources/templates/numbers.html
@@ -5,26 +5,22 @@
   <title>로또 구매하기</title>
 </head>
 <body>
-<h1>수동 구매 수량 입력</h1>
+<h1>당첨 번호 입력하기</h1>
+<div>수동으로 {{manual_count}}장, 자동으로 {{auto_count}}장 구매하였습니다.</div>
 <div>
-  총 구매 수량 : {{ count }}
+  {{#lottos}}
+  {{this}}
   <br>
-  <br>
-  수동 구매 수량 : {{ manual }}
-  <br>
-  <br>
+  {{/lottos}}
 </div>
-<form id="tags" action="/numbers" method="post">
+<form action="/winning">
+  <br>
+  <br>
+  <label for="winninglotto">당첨번호 입력 :</label>
+  <input id="winninglotto" type="text" name="winninglotto" />
+  <br>
+  <br>
+  <input type="submit" value="당첨번호 입력" />
 </form>
 </body>
-<script>
-    var manualcount = new URLSearchParams(window.location.search).get("manual")
-
-    for (var i = 0; i < manualcount; i++) {
-        var manualLottoInput = '<input type="text" name="manual' + i + '"><br><br>'
-        document.getElementById("tags").innerHTML += manualLottoInput
-    }
-
-    document.getElementById("tags").innerHTML += '<input type="submit" value="수동 번호 입력"/>'
-</script>
 </html>
