--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>로또 구매하기</title>
+    <meta charset="UTF-8">
+    <title>로또 구매하기</title>
 </head>
 <body>
-  <div id="body">
-    <h1>로또 구매 금액 입력</h1>
-    <form action="/purchase">
-      <label for="amount">구매금액 : </label>
-      <input id="amount" type="text" name="amount"/>
-      <br>
-      <br>
-      <input type="submit" value="구매금액 입력"/>
+    <h1>수동 구매 수량 입력</h1>
+    <form action="/manual">
+        총 구매 수량 : <div id="count">{{ count }}</div>
+        <br>
+        <br>
+        <label for="manual">수동 구매 수량 :</label>
+        <input id="manual" type="number" min="0" name="manual"/>
+        <br>
+        <br>
+        <input type="submit" value="수동 구매 수량 입력"/>
     </form>
-  </div>
 </body>
+<script>
+    var count = new URLSearchParams(window.location.search).get("amount") / 1000
+    document.getElementById("manual").setAttribute("max", count)
+</script>
 </html>
