refactor: 경로, html 이름 변경

--- a/src/main/resources/templates/winning_lotto.html
+++ b/src/main/resources/templates/winning_lotto.html
@@ -17,7 +17,7 @@
 
 <table>
     <tbody>
-    <form action="/lottoResult" method="post">
+    <form action="/lottoresult" method="post">
         <tr>
             <th>지난 주 당첨 번호:</th>
             <td><input type="text" placeholder="1,2,3,4,5,6" name="winningNumbers"/></td>
