--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -8,7 +8,7 @@
 <h2>조회할 회차를 선택해주세요.</h2>
 <br/>
 
-<form action="/showLottoInfo">
+<form action="/lottosinfo">
     <select name="lottoRound">
         {{#rounds}}
         <option value={{this}}>{{this}}</option>
