refactor: 경로 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="container" style="text-align: center">
             <div class="container">
-                <button type="button" class="btn btn-primary btn-lg" style="margin-top: 200px" onclick="location.href='/round-select'">지난 회차 정보 확인</button>
+                <button type="button" class="btn btn-primary btn-lg" style="margin-top: 200px" onclick="location.href='/round/select'">지난 회차 정보 확인</button>
             </div>
             <div class="container">
                 <button type="button" class="btn btn-success btn-lg mt-1" onclick="location.href='/purchase'">로또 구매</button>
