--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
         </div>
     </form>
     <h2 class="mt-5 text-center font-weight-bold">회차별 통계</h2>
-    <form action="/round/statistic">
+    <form action="/result">
         {{#round}}
         <button type="submit" class="btn btn-outline-secondary mr-2" name="round">{{this}}회</button>
         {{/round}}
