--- a/src/main/resources/templates/showLottos.html
+++ b/src/main/resources/templates/showLottos.html
@@ -29,6 +29,7 @@
     <input type="text" name="winningLotto" placeholder="1,2,3,4,5,6">
     <h3>보너스 볼을 입력해 주세요.</h3>
     <input type="number" name="bonusNo" placeholder="41">
+    <input type="hidden" name="round" value="{{round}}">
     <input type="submit" value="전송">
 </form>
 
