feat: db에 데이터 저장하는 메서드 구현

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,9 +30,9 @@
     </form>
     <h2 class="mt-5 text-center font-weight-bold">회차별 통계</h2>
     <form action="/result">
-        {{#round}}
+        {{#rounds}}
         <button type="submit" class="btn btn-outline-secondary mr-2" name="round">{{this}}회</button>
-        {{/round}}
+        {{/rounds}}
     </form>
     {{#message}}
     <div class="form-control text-center">{{message}}</div>
