set db_url as instance variable at ConnecHandler class

--- a/src/main/resources/templates/history_specific.html
+++ b/src/main/resources/templates/history_specific.html
@@ -25,13 +25,21 @@
 수익률: {{profitRate}}
 <br>
 <h2> 결과 상세 </h2>
-
-{{#each prizeInfos}}
-일치하는 숫자 개수: {{matchCount}}
-상금: {{prizeMoney}}
-일치하는 로또 개수: {{lottoCount}}
-<br><br>
-{{/each}}
+<table border="1px">
+    {{#each prizeInfos}}
+    <tr>
+        <td>
+            일치하는 숫자 개수: {{matchCount}}
+        </td>
+        <td>
+            상금: {{prizeMoney}}
+        </td>
+        <td>
+            일치하는 로또 개수: {{lottoCount}}
+        </td>
+    </tr>
+    {{/each}}
+</table>
 
 
 </body>
