develop RESTful server, vue works with sparkjava

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -11,6 +11,12 @@
     <title>Lotto App</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/home">Lotto App</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
 <div class="container">
     <p>회차 : {{ result.round }}</p>
     <p>당첨로또번호 : {{ result.winningLotto }}</p>
