[로또 - 웹, DB] 루피 미션 제출합니다. (#57)
* UPDATE : README.md

* CREATE : PurchaseAmount Class

* CREATE : LottoNumber Class

* CREATE : Lotto Class

* CREATE : GameCounts Class

* CREATE : LottoGenerator Class

* UPDATE : Modify directory structure

* CREATE : LottoGames class

* CREATE : View classes

* CREATE : Rank enum class

* CREATE : WinnerLotto Class

* CREATE : LottoApplication class

* CREATE : LottoResult Class

* UPDATE : LottoApplication Step 1 Logic

* UPDATE : adapt code convention

* UPDATE : add rate of return logic

* UPDATE : refactor PurchaseAmount Constructor

* UPDATE : Refactor LottoNumber Class to Number Abstract Class and LottoNumber Class

* UPDATE : WinningLotto Input Exception Handling

* CREATE : BonusNumber Class

* UPDATE : README.md Step2

* UPDATE : bonus number input logic

* CREATE : WinningNumbers Class

* UPDATE : Code Convention

* UPDATE : README.md Step 3

* UPDATE : Rename GameCounts to TotalCount

* CREATE : ManualCount

* CREATE : AutoCount Class

* UPDATE : Rename Counter to ResultCounter

* UPDATE : Renmae Counter to ResultCounter

* UPDATE : separate AutoLottoGames and ManualLottoGames from LottoGames

* CREATE : LottoGames Class

* UPDATE : add manual number handling logic

* UPDATE : modify exceptions package directory

* UPDATE : Code Convention

* UPDATE : make AutoLottoGames and ManualLottoGames extends LottoGames abstract class

* REMOVE : AutoCount Class

* UPDATE : Refactor Logic and Remove useless class

* UPDATE : Code Convention

* UPDATE : Refactor

* UPDATE : Check Test Codes

* UPDATE : Refactor Controller and InputView

* UPDATE : Refactor Number and WinnerLotto

* UPDATE : add valid check logic

* UPDATE : Remove getter logic and implement non-getter logic

* UPDATE : Remove ResultCounter factory method

* UPDATE : Lotto Auto Numbers generating logic

* UPDATE : Refactor getter methods

* UPDATE : Code Convention

* 

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>로또</title>
+  <meta charset="UTF-8">
+  <title>로또 구매하기</title>
 </head>
 <body>
-Hello World!!
+  <div>
+    <h1>로또 프로그램</h1>
+    <form action="/buy">
+      <input type="submit" value="구매하기"/>
+    </form>
+
+    <form action="/lookup">
+      <input type="submit" value="조회하기"/>
+    </form>
+  </div>
 </body>
 </html>
