feature : UI 구현

--- a/src/main/resources/templates/html/InputManualLotto.html
+++ b/src/main/resources/templates/html/InputManualLotto.html
@@ -11,7 +11,7 @@
     <h1>Lotto <b>{{ round }}</b>회차 : 로또 수동 입력 </h1>
     {{/webUILottoData}}
     <p> 각 로또에 6개의 수를 입력 하세요.</p>
-        <form action="/showLottos">
+        <form action="/showLottos" method="POST">
             <div id="inputManualLotto">
             </div>
             <div id="div_btn">
