--- a/src/main/resources/templates/html/InputWinningLotto.html
+++ b/src/main/resources/templates/html/InputWinningLotto.html
@@ -11,8 +11,8 @@
         {{/webUILottoData}}
         <div>
             <form action="/resultOfRound">
-                로또 6자리 : <input type="text" placeholder="ex) 1, 2, 3, 4, 5, 6" autofocus required><br><br>
-                보너스 번호 : <input type="number" placeholder="ex) 7" required><br><br>
+                로또 6자리 : <input type="text" name="winningLotto" placeholder="ex) 1, 2, 3, 4, 5, 6" autofocus required><br><br>
+                보너스 번호 : <input type="number" name="bonusBall" placeholder="ex) 7" required><br><br>
                 <input type="submit" value="입력 완료">
                 <input type="reset" value="재입력">
             </form>
