--- a/src/main/resources/templates/html/ResultOfRound.html
+++ b/src/main/resources/templates/html/ResultOfRound.html
@@ -6,11 +6,16 @@
         <link rel="stylesheet" href="../css/resultOfRound.css">
     </head>
     <body>
-    {{#webUILottoData}}
-    <h1>Lotto <b>{{round}}</b>회차 : 결과 </h1>
-    {{/webUILottoData}}
-    <div id="resultOfRound">
-            
+        {{#webUILottoData}}
+        <h1>Lotto <b>{{round}}</b>회차 : 결과 </h1>
+        {{/webUILottoData}}
+        <div id="resultOfRound">
+            {{#lottoGameResult}}
+            <br>{{this}} <br>
+            {{/lottoGameResult}}
         </div>
+        <form action="/">
+            <input type="submit" id="submit" value="확인">
+        </form>
     </body>
 </html>
