--- a/src/main/resources/templates/round-select.html
+++ b/src/main/resources/templates/round-select.html
@@ -11,7 +11,7 @@
     <title>로또</title>
     <style>
             body {
-                background-image: url("../images/lotto_background.jpeg");
+                background-image: url("/images/lotto_background.jpeg");
                 background-repeat:no-repeat;
                 background-size:cover;
             }
