--- a/src/main/resources/templates/lotto.html
+++ b/src/main/resources/templates/lotto.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container" style="max-width: 900px">
     <h1 class="mt-5 text-center font-weight-bold">Make Self Lotto</h1>
-    <input id ="countOfSelf" type="hidden" value={{countOfSelf}}>
+    <input id ="selfCount" type="hidden" value={{selfCount}}>
     <form action="/lottos" method="post">
         <div class="row justify-content-center">
             <div class="col-auto">
