feat : 로또 구매 및 DB저장 기능 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <form action="lottogame/money" method="post">
     <input type="submit" value="로또 구입">
 </form>
-<form action="lottogame/result" method="post">
+<form action="lottogame/create" method="post">
     <input type="submit" value="당첨 번호 입력">
 </form>
 <div class="hello"></div>
