--- a/src/main/resources/templates/purchaseresult.html
+++ b/src/main/resources/templates/purchaseresult.html
@@ -7,6 +7,6 @@
 <body>
 <h1>구입 결과</h1>
 수동으로{{numberOfManual}}개, 자동으로 {{numberOfAuto}}개 구입하였습니다.
-    {{#lottoTickets lotto}}
+{{lottoTickets}}
 </body>
 </html>
