--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,8 +29,9 @@
     </form>
     <div class="row">
         <div class="col-md-6">
+            round | name | total price | earning rate<br>
             {{#lottoGames}}
-                {{round}} | {{name}} | {{totalWinningMoney}} 원<br>
+                {{round}} | {{name}} | {{totalWinningMoney}} 원 | {{earningRate}}<br>
             {{/lottoGames}}
         </div>
         <div class="col-md-6">
