--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -7,10 +7,11 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="assets/css/balls.css" />
     </head>
     <body class="is-preload">
         <header id="header">
-            <a class="logo" href="index.html">Lotto</a>
+            <a class="logo" href="/">Lotto</a>
         </header>
         <section id="banner">
             <div class="inner">
@@ -20,14 +21,14 @@
             <video autoplay loop muted playsinline src="images/banner.mp4"></video>
         </section>
         <section class="wrapper">
-            <div class="inner">
+            <div id="front_page" class="inner">
                 <header class="special">
                     <h2>장당 {{priceFormatted}}원</h2>
                     <p>(수동으로 입력하지 않은 만큼은 자동 발권됩니다.)</p>
                 </header>
                 <section>
                     <div class="content">
-                        <form action="/lotto" method="get">
+                        <form id="purchase">
                             투자금 : <input id="investment" type="text" name="investment" onchange="resetManualInputs()" />
                             <br />
                             <div align="right">
@@ -49,7 +50,7 @@
                                     <select name="round">
                                         {{{recentRoundMenu}}}
                                     </select>
-                                    <input type="submit" value="구매하기"/>
+                                    <input type="button" value="구매하기" onclick="submitPurchase()" />
                                 </div>
                             </div>
                         </form>
@@ -58,17 +59,18 @@
                         <br />
                         <div style="display: grid; grid-template-columns: repeat(3, 1fr); grid-gap: 10px; grid-auto-rows: minmax(100px, auto);" align="right">
                             <div style="grid-column: 3;">
-                                <form action="/history" method="get">
+                                <form id="history">
                                     <select name="date">
                                         {{{history}}}
                                     </select>
-                                    <input type="submit" value="히스토리"/>
+                                    <input type="button" value="히스토리" onclick="submitHistory()" />
                                 </form>
                             </div>
                         </div>
                     </div>
                 </section>
             </div>
+            <div id="result_page" class="inner" />
         </section>
         <footer id="footer">
             <div class="inner">
@@ -87,6 +89,8 @@
             const price = {{price}}
         </script>
         <script src="assets/js/ui.js"></script>
+        <script src="assets/js/api.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/browser.min.js"></script>
         <script src="assets/js/breakpoints.min.js"></script>
