[MOD] 입력에 대한 예외 처리 (빈칸, 문자)

--- a/src/main/resources/templates/error_message.html
+++ b/src/main/resources/templates/error_message.html
@@ -16,7 +16,7 @@
 {{message}}
 <br>
 <form action="/" method="GET">
-    <input type="submit" id="to-home" value="메인 화면으로 돌아가기"></button>
+    <input type="submit" id="to-home" value="뒤로 가기"></button>
 </form>
 
 <!-- Optional JavaScript -->
