--- a/src/main/resources/templates/lottoresult.html
+++ b/src/main/resources/templates/lottoresult.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <h1>당첨 결과</h1>
-{{lottoResult}}
+구입 금액 : {{price}}<br>
+수익률 : {{rateOfLotto}}%<br>
+3개 일치 (5000원)- {{fifth}}개 <br>
+4개 일치 (50000원)- {{fourth}}개 <br>
+5개 일치 (1500000원)- {{third}}개 <br>
+5개 일치, 보너스 볼 일치(30000000원) - {{second}}개 <br>
+6개 일치 (2000000000원)- {{first}}개 <br>
 </body>
 </html>
